--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
-Oni Michael <onimichaelsamuel@gmail.com>
+Oni Michael <onisamuelmichael@gmail.com>
+
 
